# trace

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs  utils.rs
test/: a.out  hello.asm  test.c  test.cov  test0
